# old_fasb

./: +  .gitignore  .travis.yml  8_queens.lp  Cargo.toml  README.md  bla  bla.lp  bla.py  cups.lp  elisa.lp  ex1.lp  foo  grid.lp  grid_3.lp  iaspre.py  kniffi  line_diagrams.lp  no_rep_perms_3.lp  perm3  riddle.lp  schicht_plan_pref.lp  sudoku.lp  sudoku4x4.lp  test.lp  test_some.lp  tiny_extended.bla
lps/: 27_queens.lp  2kniff.lp  30_queens.lp  4_queens.lp  4_queens_online1_parallel_exact.lp  6_queens.lp  7_queens.lp  8_queens.lp  8_queens_cores.lp  8_queens_online1_parallel_exact.lp  9_queens.lp  af_pr.lp  af_st.lp  af_st_c.lp  af_st_cn.lp  alacritty-smoke.lp  bike_example.lp  bla.lp  cups.lp  example.lp  exm6.lp  find_cores_soe_exm.lp  find_dcores_soe_exm.lp  find_dcores_tiny.lp  grid.lp  grid_dasc.lp  hanabi.lp  kniff.lp  kniff_colored.lp  kniff_table  kniffi.lp  pc_conf.lp  pc_conf_2inst.lp  pc_conf_cores.lp  pc_conf_simdiv.lp  perm3_norep.lp  perm3_norep_renamed.lp  perm3_norep_renamed_cores.lp  perm3_norep_renamed_normal.lp  perm3_norep_renamed_normal_extended_0.lp  (+23 more)
rust_instances/: alacritty_61_251_100_24_0.lp  alacritty_61_251_25_6_0.lp  alacritty_61_251_25_6_1.lp  alacritty_61_251_25_6_2.lp  alacritty_61_251_50_12_0.lp  alacritty_61_251_50_12_1.lp  alacritty_61_251_50_12_2.lp  alacritty_61_251_75_18_0.lp  alacritty_61_251_75_18_1.lp  alacritty_61_251_75_18_2.lp
src/: .main.rs.rustfmt  asnc.rs  atom.pest  cache.rs  collect_soe.rs  commands.rs  config.rs  dasc.rs  dlx.rs  editor.rs  incidences.rs  lib.rs  main.rs  navigator.rs  soe.rs  soe_old.rs  translator.rs  utils.rs
target_atoms/: some
(+2 files in other folders)
