[package]
name = "fasb"
version = "0.1.0"
edition = "2018"

[dependencies]
clingo = { git = "https://github.com/drwadu/clingo-rs", branch = "backport-0.6/issue43" }
regex = "0.1"
thiserror = "1.0"
num_cpus = "1.13.0"
pest = "2.1.0"
pest_derive = "2.1.0"
itertools = "0.10.0"
lazy_static = "1.4"
lru = "0.6"
rand = "0.8"
indicatif = "0.16.2"

[profile.release]
debug = true

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
log = "0.4.14"
env_logger = "0.8.4"
chrono = "0.4"
