[package]
name = "fasb"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Rusovac <dominik.rusovac@hotmail.com>"]
readme = "README.md"
description = "Rust Port of the Faceted Answer Set Browser (fasb)"
repository = "https://github.com/drwadu/fasb"
keywords = ["answer set programming", "answer set navigation", "declarative programing", "logic programming"]
categories = ["mathematics"]
license = "GPL-2.0"

[dependencies]
clingo = { git = "https://github.com/drwadu/clingo-rs", branch = "backport-0.6/issue43" }
regex = "0.1"
thiserror = "1.0"
num_cpus = "1.13.0"
pest = "2.1.0"
pest_derive = "2.1.0"
itertools = "0.10.0"
lazy_static = "1.4"
lru = "0.6"
rand = "0.8"
indicatif = "0.16.2"
ncurses = "5.101.0"
hashbrown = "0.13.2"
#statrs = "0.16.0"

[profile.release]
debug = true

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
log = "0.4.14"
env_logger = "0.8.4"
chrono = "0.4"

[features]
with_stats = []

# RUSTFLAGS='-C target-feature=+crt-static' cargo build --release --target x86_64-unknown-linux-gnu
